--- a/package.json
+++ b/package.json
@@ -9,20 +9,33 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tsparticles/engine": "^3.5.0",
+    "@tsparticles/shape-circle": "^3.5.0",
+    "next": "14.1.0",
     "react": "^18.3",
     "react-dom": "^18.3",
-    "next": "14.1.0",
-    "thirdweb": "^5"
+    "react-tsparticles": "^2.12.2",
+    "thirdweb": "^5",
+    "tsparticles": "^3.5.0"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@chakra-ui/icons": "^2.1.1",
+    "@chakra-ui/next-js": "^2.2.0",
+    "@chakra-ui/react": "^2.8.2",
+    "@chakra-ui/theme-tools": "^2.1.2",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@tanstack/react-query": "^5.44.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "blo": "^1.2.0",
+    "eslint": "^8",
+    "eslint-config-next": "14.1.0",
+    "framer-motion": "^11.2.10",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.0"
+    "typescript": "^5"
   }
 }
