--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@thirdweb-dev/react": "^4.9.4",
+    "@thirdweb-dev/sdk": "^4.0.99",
     "@tsparticles/engine": "^3.5.0",
     "@tsparticles/shape-circle": "^3.5.0",
+    "ethers": "5",
     "next": "14.1.0",
     "react": "^18.3",
     "react-dom": "^18.3",
