--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "ethers": "5",
     "next": "14.1.0",
     "react": "^18.3",
+    "react-countdown": "^2.3.5",
     "react-dom": "^18.3",
     "react-tsparticles": "^2.12.2",
     "thirdweb": "^5",
